<resources>
    <string name="app_name">Eco Customer App</string>
    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="open_drawer">Drawer Open</string>
    <string name="close_drawer">Drawer Close</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>
    <string name="login_dummy">Login Dummy</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="invalid_email_password">Please provide a valid email and password.</string>
    <string name="project_info">This sample app implements MVVM architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvvm_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvvm_repo">2. https://github.com/MindorksOpenSource/android-mvvm-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>
    <string name="later">Later</string>
    <string name="submit">Submit</string>
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>
    <string name="welcome">Welcome to ECO RENT A CAR</string>
    <string name="new_user">New user please <i><b><u><p><font color="#3b5998">register </font></p></u></b></i> here.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="already_user">Already a user just <i><b><u><p><font color="#3b5998">login</font></p></u></b></i> here.</string>
    <string name="user_name">User name</string>
    <string name="phone_number">Phone number</string>
    <string name="please_enter_mobile_number">Please enter mobile number.</string>
    <string name="please_enter_valid_mobile_number">Please enter valid 10 digit mobile number.</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="book_a_ride">Book a ride</string>
    <string name="my_profile">My profile</string>
    <string name="my_bookings">My bookings</string>
    <string name="pending_bookings">Pending bookings for approval</string>
    <string name="support">Support</string>
    <string name="about_us">About us</string>
    <string name="track">Track</string>
    <string name="airport">Airport</string>
    <string name="past">PAST</string>
    <string name="upcoming">UPCOMING</string>
    <string name="pending">PENDING</string>
    <string name="local">Local</string>
    <string name="outstation">Out\nStation</string>
    <string name="personal">Personal</string>
    <string name="corporate">Corporate</string>
    <string name="booking_for_someone_else">Booking for someone else?</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="trip">Trip</string>
    <string name="pickup_address">(Landmark, BuildingName, Door number)</string>
    <string name="pickup__address">Pickup address</string>
    <string name="pickup_date">Pickup date \n and time</string>
    <string name="date_time">DATE &amp; TIME</string>
    <string name="duty_type">DUTY TYPE</string>
    <string name="fare">TOTAL_FARE</string>
    <string name="drop_date">Drop date \n and time</string>
    <string name="pickup_date_only">Pickup date</string>
    <string name="pickup_time">Pickup time</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_fragment">FragmentActivity</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="select_car">Select Car</string>
    <string name="modify">Modify</string>
    <string name="capacity">4+ \n driver</string>
    <string name="contact_pickup"><![CDATA[1. Contact & Pickup details]]></string>
    <string name="name">Name*</string>
    <string name="email_address">Email Address*</string>
    <string name="landmark">Pickup address (Landmark, BuildingName, Door number)</string>
    <string name="flight_details_mandate">Please specify your Flight number*</string>
    <string name="flight_details">Please specify your Flight number</string>
    <string name="flight_detail">Flight details</string>
    <string name="case_code">Case code</string>
    <string name="airport_pickup">Airport pickup?</string>
    <string name="terminal">Terminal</string>
    <string name="send_details">Send trip details to alternate eamil.</string>
    <string name="your_booking_details">Your booking details</string>
    <string name="pickup_city">Pickup City</string>
    <string-array name="trip_type">
        <item>Select Trip Type</item>
        <item>To airport</item>
        <item>From airport</item>
    </string-array>
    <string name="car_type">Car Type</string>
    <string name="total_fare">Total fare</string>
    <string name="proceed_to_pay">Proceed</string>
    <string name="confirm">Booking Summery</string>
    <string name="service_type">Service Type</string>
    <string name="airport_transfer">Airport\nTransfer</string>
    <string name="packages">Package</string>
    <string name="from_airport">From Airport</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="bill_to_company">Bill to company</string>
    <string name="special_requirements">Special Requirements</string>
    <string name="sp_requirements">Sp. Requirements</string>
    <string name="track_driver">Track Driver</string>
    <string name="mobile_number">Mobile number</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="cancel">Cancel</string>
    <string name="expand">Expand</string>
    <string name="edit_booking">Edit Booking</string>
    <string name="feedback">Feedback</string>
    <string name="edit_billing">Edit Billing details</string>
    <string name="guest_details">Guest Details</string>
    <string name="close">Close</string>
    <string-array name="select">
        <item>Select</item>
    </string-array>
    <string-array name="local_package">
        <item>4Hr/40Km</item>
        <item>8Hr/80Km</item>
    </string-array>
    <string-array name="country_code">
        <item>+91 India</item>
    </string-array>
    <string-array name="service_name">
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
        <item>Track Driver</item>
    </string-array>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="gender">Gender*</string>
    <string name="f_name">First Name*</string>
    <string name="l_name">Last Name*</string>
    <string name="get_otp">Get OTP</string>
    <string name="please_enter_valid_email_address">Please enter valid email address</string>
    <string name="email_otp">Email OTP</string>
    <string name="mobile_otp">Mobile OTP</string>
    <string name="register">Register</string>
    <string name="picker_today">Today</string>
    <string name="picker_am">AM</string>
    <string name="picker_pm">PM</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="railway_pickup">Railway station pickup?</string>
    <string name="drop_address">(Landmark, BuildingName, Door number)</string>
    <string name="drop__address">Drop address</string>
    <string name="date_format">dd/MM/yyyy hh:mm</string>
    <string name="city_from">City From</string>
    <string name="city_to">City To</string>
    <string name="round_trip">Round trip</string>
    <string name="one_way">One way</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="na">N/A</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_email">Personal Email ID*</string>
    <string name="official_email">Enter your Official Email ID*</string>
    <string name="send_otp">Send OTP</string>
    <string name="resend">Resend</string>
    <string name="update">Update</string>
    <string name="firebase_error">Firebase token not available, Please restart the app!</string>
    <string name="default_notification_channel_id">01</string>
    <string name="fcm_message">Hello</string>
    <string name="home">Home</string>
    <string name="special_instructions">Special Request</string>
    <string name="something_wrong">Something went wrong!</string>
    <string name="user">USER</string>
    <string name="booking_number">BOOKING NO.</string>
    <string name="individual">Individual</string>
    <string name="choose_drive_mode">Choose Drive Mode</string>
    <string name="india_chauffeur_drive">India Chauffeur Drive</string>
    <string name="india_self_drive">India Self Drive</string>
    <string name="international_chauffeur_drive">International Chauffeur Drive</string>
    <string name="international_self_drive">International Self Drive</string>
    <string name="urban_drive">Urban Drive</string>
    <string name="urban"><![CDATA[Urban Drive is the newly launched B2C brand of ECOS (India) Mobility & Hospitality Pvt. Ltd. Offering Chauffeur-Driven car rental along with Self Drive car Services in over 100+ cities in India and overseas.]]></string>
</resources>