<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="onCheckChange"
            type="android.widget.CompoundButton.OnCheckedChangeListener" />

        <variable
            name="viewModel"
            type="com.ecocustomerapp.ui.fragments.mode.ModeViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                android:layout_marginStart="@dimen/dp_58"
                android:layout_marginTop="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_58"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt_individual"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_12"
                    android:enabled="true"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/individual"
                    android:textColor="@color/txt_switch"
                    android:textSize="@dimen/sp_11"
                    android:textStyle="normal"
                    app:font="@{`regular`}" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/swc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onCheckedChanged="@{onCheckChange}"
                    android:thumb="@drawable/thumb"
                    app:track="@drawable/track" />

                <TextView
                    android:id="@+id/txt_corporate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_12"
                    android:enabled="false"
                    android:letterSpacing="0.1"
                    android:lineSpacingExtra="7sp"
                    android:text="@string/corporate"
                    android:textColor="@color/txt_switch"
                    android:textSize="@dimen/sp_11"
                    android:textStyle="normal"
                    app:font="@{`regular`}" />
            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/dp_13"
                android:gravity="center"
                android:text="@string/choose_drive_mode"
                android:textColor="#1c1c1e"
                android:textSize="@dimen/sp_12"
                android:textStyle="normal"
                app:font="@{`bold`}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_33"
                android:layout_marginStart="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginEnd="@dimen/dp_26"
                android:background="@drawable/btn_bg_black_white"
                android:onClick="@{()->viewModel.chauffeurDriver()}"
                android:padding="@dimen/dp_8"
                android:text="@string/india_chauffeur_drive"
                android:textColor="@color/btn_txt_selector"
                android:textSize="@dimen/sp_11"
                android:textStyle="normal"
                app:font="@{`lite`}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_33"
                android:layout_marginStart="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_26"
                android:background="@drawable/btn_bg_black_white"
                android:onClick="@{()->viewModel.comingSoon()}"
                android:padding="@dimen/dp_8"
                android:text="@string/international_chauffeur_drive"
                android:textColor="@color/btn_txt_selector"
                android:textSize="@dimen/sp_11"
                android:textStyle="normal"
                app:font="@{`lite`}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_33"
                android:layout_marginStart="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_26"
                android:background="@drawable/btn_bg_black_white"
                android:onClick="@{()->viewModel.comingSoon()}"
                android:padding="@dimen/dp_8"
                android:text="@string/india_self_drive"
                android:textColor="@color/btn_txt_selector"
                android:textSize="@dimen/sp_11"
                android:textStyle="normal"
                app:font="@{`lite`}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_33"
                android:layout_marginStart="@dimen/dp_26"
                android:layout_marginTop="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_26"
                android:background="@drawable/btn_bg_black_white"
                android:onClick="@{()->viewModel.comingSoon()}"
                android:padding="@dimen/dp_8"
                android:text="@string/international_self_drive"
                android:textColor="@color/btn_txt_selector"
                android:textSize="@dimen/sp_11"
                android:textStyle="normal"
                app:font="@{`lite`}" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/photos_viewpager"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_124"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_26" />

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/viewpager_tab"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp_10"
                app:tabBackground="@drawable/tab_selector"
                app:tabGravity="center"
                app:tabIndicatorHeight="0dp"
                app:tabMaxWidth="@dimen/dp_15"
                app:tabMinWidth="@dimen/dp_15" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_87"
                android:layout_marginBottom="@dimen/dp_30"
                android:layout_marginHorizontal="@dimen/dp_14"
                android:layout_marginTop="@dimen/dp_19"
                android:elevation="@dimen/dp_10"
                app:cardCornerRadius="@dimen/dp_10">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/img_drive"
                        android:layout_width="@dimen/dp_52"
                        android:layout_height="@dimen/dp_52"
                        android:layout_centerVertical="true"
                        android:layout_marginHorizontal="@dimen/dp_9"
                        android:contentDescription="@string/about"
                        android:src="@drawable/david" />

                    <TextView
                        android:id="@+id/txt_drive"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_12"
                        android:layout_toEndOf="@+id/img_drive"
                        android:lineSpacingExtra="9sp"
                        android:text="@string/urban_drive"
                        android:textColor="#303030"
                        android:textSize="@dimen/sp_15"
                        android:textStyle="normal"
                        app:font="@{`medium`}" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txt_drive"
                        android:layout_marginTop="@dimen/dp_3"
                        android:layout_marginEnd="@dimen/dp_10"
                        android:layout_toEndOf="@+id/img_drive"
                        android:text="@string/urban"
                        android:textColor="#7c7d7e"
                        android:textSize="@dimen/sp_7"
                        android:textStyle="normal"
                        app:font="@{`lite`}" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>
    </ScrollView>
</layout>